# Novice_Engineer

./: README.md
DMC_16_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
HC_SR04_test_cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
HC_SR04_test_py/: main.py
Network_Socket/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
cpp_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cpp_test.cpp  test
